--- a/public/admin.html
+++ b/public/admin.html
@@ -380,6 +380,25 @@
 
       </div>
 
+      <!-- 🔴 FYERS DATA SOCKET LIVE STREAM MONITOR -->
+<div class="admin-card" style="margin-top:24px;">
+  <div class="admin-card-head">
+    <div>
+      <div class="admin-card-title">Live DataSocket Stream</div>
+      <div class="note-small">
+        View the most recent real-time LTP updates received from Fyers API.
+      </div>
+    </div>
+    <div>
+      <button id="btnClearSocketLog" class="admin-mini-btn danger">Clear</button>
+    </div>
+  </div>
+
+  <div class="broker-token-grid" style="max-height:240px;overflow-y:auto;background:#0f1117;color:#d5d9e0;padding:8px;border-radius:8px;font-family:monospace;font-size:13px;" id="socketStreamBox">
+    <div>Awaiting live ticks…</div>
+  </div>
+</div>
+
       
 
       
