--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
   <header class="lp-nav-wrap">
     <div class="lp-nav container">
       <a href="#top" class="lp-brand" aria-label="IntradayGain home">
-        <div class="lp-logo">QP</div>
+        <div class="lp-logo">IG</div>
         <div class="lp-brand-text">
           <div class="lp-brand-name">IntradayGain</div>
           <div class="lp-brand-tag">Algorithmic Precision</div>
@@ -94,7 +94,7 @@
             <div class="panel-head">
               <div>
                 <div class="panel-title">Live Stock Desk</div>
-                <div class="panel-sub">Strategy: QP Momentum Stack</div>
+                <div class="panel-sub">Strategy: IG Momentum Stack</div>
               </div>
               <div class="panel-status">Synchronized</div>
             </div>
@@ -142,18 +142,7 @@
       </div>
     </section>
 
-    <section class="lp-trustband">
-      <div class="container trustband-grid">
-        <span class="trustband-label">In pilot with teams from</span>
-        <div class="trustband-logos">
-          <span>DeltaEdge Capital</span>
-          <span>Myriad Quant Lab</span>
-          <span>Finverse PMS</span>
-          <span>Sigma Hive Desk</span>
-          <span>Stride Partners</span>
-        </div>
-      </div>
-    </section>
+
 
     <section class="lp-section lp-value" id="features">
       <div class="container">
@@ -316,53 +305,13 @@
       </div>
     </section>
 
-    <section class="lp-section lp-proof">
-      <div class="container">
-        <div class="lp-section-head">
-          <span class="section-eyebrow">What clients experience</span>
-          <h2>Quant desks reduce chaos and compound edge</h2>
-        </div>
-
-        <div class="proof-grid">
-          <article class="proof-card">
-            <div class="proof-quote">
-              "Manual monitoring meant we entered late and exited in panic. IntradayGain made our intraday book feel like
-              clockwork."
-            </div>
-            <div class="proof-author">
-              Rahul Jain - Head Trader, DeltaEdge Capital
-            </div>
-          </article>
-
-          <article class="proof-card">
-            <div class="proof-quote">
-              "Risk review now starts with crisp analytics instead of spreadsheets. We can prove discipline to investors
-              in minutes."
-            </div>
-            <div class="proof-author">
-              Meera Shah - COO, Finverse PMS
-            </div>
-          </article>
-
-          <article class="proof-card">
-            <div class="proof-quote">
-              "Integration was straightforward. The automation layer respects our own strategies while enforcing every
-              guardrail."
-            </div>
-            <div class="proof-author">
-              Arjun Patel - CTO, Stride Partners
-            </div>
-          </article>
-        </div>
-      </div>
-    </section>
-
+    
   </main>
 
   <footer class="lp-foot">
     <div class="container lp-foot-grid">
       <div class="lp-foot-col">
-        <div class="lp-foot-logo">QP</div>
+        <div class="lp-foot-logo">IG</div>
         <p class="lp-foot-text">
           IntradayGain helps intraday traders run structured, automated decisions so they can scale confidence alongside
           capital.
@@ -383,9 +332,9 @@
 
       <div class="lp-foot-col">
         <div class="lp-foot-head">Contact</div>
-        <div class="lp-foot-link">support@IntradayGain.in</div>
+        <div class="lp-foot-link">support@IntradayGain.Com</div>
         <div class="lp-foot-link">WhatsApp: +91 98xxxxxx12</div>
-        <div class="lp-foot-link">India · Remote</div>
+        <div class="lp-foot-link">India </div>
       </div>
     </div>
 
@@ -455,7 +404,7 @@
 
         <div class="form-field">
           <label>Phone / WhatsApp</label>
-          <input type="tel" name="phone" placeholder="+91 98xxxxxx12" />
+          <input type="tel" name="phone" placeholder="Enter Your Mobile Number" />
         </div>
 
         <div class="form-field">
