--- a/public/admin.html
+++ b/public/admin.html
@@ -287,6 +287,11 @@
             </div>
 
             <div class="broker-token-actions">
+              <div class="broker-step-row">
+                <label for="fyersAuthCodeInput">Auth Code</label>
+                <input id="fyersAuthCodeInput" type="text" placeholder="Paste auth_code here" />
+                <button type="button" class="admin-mini-btn" id="fyersExchangeBtn">Exchange Auth Code</button>
+              </div>
               <div class="broker-step-help" id="fyersStatusMsg"></div>
             </div>
           </div>
