--- a/public/app.html
+++ b/public/app.html
@@ -234,20 +234,11 @@
                </article>
 
               <article class="app-setting-card">
-                <div class="app-setting-label">Angel live execution</div>
-                <div class="app-pill status" id="angelLiveStatus" data-state="off">Live OFF</div>
-                <button type="button" class="app-btn outline small" id="angelLiveToggleBtn">Enable Live</button>
+                <div class="app-setting-label">Trading Engine</div>
+                <div class="app-pill status" id="tradingEngineStatus" data-state="off">Engine OFF</div>
+                <button type="button" class="app-btn outline small" id="tradingEngineToggleBtn">Enable Trading Engine</button>
                 <p class="app-setting-hint">
-                  Requires Angel broker link and upgraded plan. Toggle only after reviewing your margin cap.
-                </p>
-              </article>
-
-              <article class="app-setting-card">
-                <div class="app-setting-label">Automation master switch</div>
-                <div class="app-setting-value" id="autoMode">OFF</div>
-                <button type="button" class="app-btn outline small" id="toggleAutoBtn">Enable Auto Trading</button>
-                <p class="app-setting-hint">
-                  Paper trading keeps running even when automation is off. You choose when to go live.
+                  Requires subscription and Angel broker link. OFF: Paper trades only. ON: Live trades enabled.
                 </p>
               </article>
 
