--- a/public/admin.html
+++ b/public/admin.html
@@ -108,18 +108,21 @@
             <table class="admin-table">
               <thead>
                 <tr>
+                  <th>User</th>
                   <th>Symbol</th>
-                  <th>Direction</th>
                   <th>Qty</th>
                   <th>Entry</th>
                   <th>Current</th>
+                  <th>Target</th>
+                  <th>Stop</th>
+                  <th>P&L</th>
                   <th>Status</th>
-                  <th>Updated</th>
+                  <th>Action</th>
                 </tr>
               </thead>
               <tbody id="adminTradesTbody">
                 <tr>
-                  <td colspan="7" class="admin-table-placeholder">Loading...</td>
+                  <td colspan="10" class="admin-table-placeholder">Loading...</td>
                 </tr>
               </tbody>
             </table>
