--- a/public/app.html
+++ b/public/app.html
@@ -158,14 +158,16 @@
                       <th>Symbol</th>
                       <th>Qty</th>
                       <th>Entry</th>
+                      <th>Current</th>
                       <th>Target</th>
                       <th>Stop</th>
-                      <th>Status</th>
+                      <th>P&L</th>
+                      <th>Action</th>
                     </tr>
                   </thead>
                   <tbody id="tradesTableBody">
                     <tr>
-                      <td colspan="6">Loading...</td>
+                      <td colspan="8">Loading...</td>
                     </tr>
                   </tbody>
                 </table>
