--- a/public/app.html
+++ b/public/app.html
@@ -92,7 +92,7 @@
                 <span class="app-hero-metric-value" id="repClosed">--</span>
               </article>
               <article class="app-hero-metric">
-                <span class="app-hero-metric-label">Wins / losses</span>
+                <span class="app-hero-metric-label">Wins / Losses / Self Closed</span>
                 <span class="app-hero-metric-value" id="repWL">--</span>
               </article>
               <article class="app-hero-metric">
@@ -123,15 +123,13 @@
                   <thead>
                     <tr>
                       <th>Symbol</th>
-                      <th>Suggested entry (LTP)</th>
-                      <th>Target (+1.5%)</th>
-                      <th>Stop (-0.75%)</th>
-                      <th>Action</th>
+                      <th>Entry Zone</th>
+                      <th>RSI (14)</th>
                     </tr>
                   </thead>
                   <tbody id="signalsTableBody">
                     <tr>
-                      <td colspan="5">Loading...</td>
+                      <td colspan="3">Loading...</td>
                     </tr>
                   </tbody>
                 </table>
@@ -312,4 +310,3 @@
   <script src="./js/app.js"></script>
 </body>
 </html>
-
