--- a/public/admin.html
+++ b/public/admin.html
@@ -78,15 +78,13 @@
               <thead>
                 <tr>
                   <th>Symbol</th>
-                  <th>Entry Price</th>
-                  <th>Target</th>
-                  <th>Stop</th>
-                  <th>Why Listed</th>
+                  <th>Entry Zone</th>
+                  <th>RSI (14)</th>
                 </tr>
               </thead>
               <tbody id="adminSignalsTbody">
                 <tr>
-                  <td colspan="5" class="admin-table-placeholder">Loading...</td>
+                  <td colspan="3" class="admin-table-placeholder">Loading...</td>
                 </tr>
               </tbody>
             </table>
