--- a/public/app.html
+++ b/public/app.html
@@ -317,7 +317,7 @@
       <p>Upgrade to unlock live automation, Angel integration, and full analytics.</p>
 
       <div class="pricing-modal-grid">
-        <article class="pricing-option" data-plan="monthly">
+        <article class="pricing-option" data-plan="Monthly">
           <h4>Monthly</h4>
           <p class="pricing-price">&#8377;1,000</p>
           <ul>
@@ -325,10 +325,10 @@
             <li>Priority onboarding</li>
             <li>Automation Access 1 Month</li>
           </ul>
-          <button type="button" class="app-btn primary small pricing-select" data-plan="monthly">Choose Monthly</button>
+          <button type="button" class="app-btn primary small pricing-select" data-plan="Monthly">Choose Monthly</button>
         </article>
 
-        <article class="pricing-option" data-plan="quarterly">
+        <article class="pricing-option" data-plan="Quarterly">
           <div class="pricing-badge">Popular</div>
           <h4>Quarterly</h4>
           <p class="pricing-price">&#8377;2,100</p>
@@ -337,10 +337,10 @@
             <li>Priority onboarding</li>
             <li>Automation Access 3 Months</li>
           </ul>
-          <button type="button" class="app-btn primary small pricing-select" data-plan="quarterly">Choose Quarterly</button>
+          <button type="button" class="app-btn primary small pricing-select" data-plan="Quarterly">Choose Quarterly</button>
         </article>
 
-        <article class="pricing-option" data-plan="yearly">
+        <article class="pricing-option" data-plan="Yearly">
           <h4>Yearly</h4>
           <p class="pricing-price">&#8377;6,000</p>
           <ul>
@@ -348,7 +348,7 @@
             <li>Priority onboarding</li>
             <li>Automation Access 12 Months</li>
           </ul>
-          <button type="button" class="app-btn primary small pricing-select" data-plan="yearly">Choose Yearly</button>
+          <button type="button" class="app-btn primary small pricing-select" data-plan="Yearly">Choose Yearly</button>
         </article>
       </div>
 
